log/build_2026-06-07_13-35-52/my_py_pkg/stderr.log
  File "/home/breno/ros2_ws/install/my_py_pkg/lib/python3.12/site-packages/my_py_pkg/reset_counter.py", line 26
    if response.success = True:
       ^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

